--- a/index.html
+++ b/index.html
@@ -6,13 +6,18 @@
     <script src="script.js" defer></script>
 </head>
 <body>
-        <h1>
-            Femboy bingo
-        </h1>
-        <button id="generate">
-            Generate Bingo
-        </button>
-        <br><br>
+        <center>
+            <h1>
+                Femboy bingo
+            </h1>
+            <button id="generate">
+                Generate Bingo
+            </button>
+            <br><br>
+        </center>
         <span id="bingo"></span>
+        <center>
+            <h1 id="ygBingo"></h1>
+        </center>
 </body>
 </html>
