--- a/index.html
+++ b/index.html
@@ -11,13 +11,15 @@
                 Femboy bingo
             </h1>
             <button id="generate">
-                Generate Bingo
+                <h1>Generate Bingo</h1>
             </button>
             <br><br>
         </center>
         <span id="bingo"></span>
         <center>
             <h1 id="ygBingo"></h1>
+            <br><br><br>
+            <h2>Made by npe : <a href="https://www.reddit.com/u/npethefemboy">Reddit</a> | <a href="https://github.com/npedv/femboybingogenerator/">GitHub</a></h2>
         </center>
 </body>
 </html>
