--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
                 Femboy bingo
             </h1>
             <button id="generate">
-                <h1>Generate Bingo</h1>
+                <h1 class="buttonH1">Generate Bingo</h1>
             </button>
             <br><br>
         </center>
@@ -19,7 +19,10 @@
         <center>
             <h1 id="ygBingo"></h1>
             <br><br><br>
-            <h2>Made by npe : <a href="https://www.reddit.com/u/npethefemboy">Reddit</a> | <a href="https://github.com/npedv/femboybingogenerator/">GitHub</a></h2>
+            <h2>Made by npe : <a href="https://www.reddit.com/u/npethefemboy">Reddit</a> | <a href="https://github.com/npedv/femboybingogenerator/">GitHub</a>
+            <br>
+            V0.2
+            </h2>
         </center>
 </body>
 </html>
