--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <title>Femboy bingo generator</title>
     <link rel="stylesheet" href="style.css">
     <script src="script.js" defer></script>
+    <link rel="icon" href="https://styles.redditmedia.com/t5_85tg88/styles/profileIcon_uqg8lfl9q4qc1.png?width=256&height=256&frame=1&auto=webp&crop=256:256,smart&s=1970345e57d858b57845b748d2d5e39c54f6c07e">
 </head>
 <body>
         <center>
