--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
         <center>
             <h1>
-                Femboy bingo
+                Bingo generator
             </h1>
             <button id="generate">
                 <h1 class="buttonH1">Generate Bingo</h1>
@@ -22,7 +22,7 @@
             <br><br><br>
             <h2>Made by npe : <a href="https://www.reddit.com/u/npethefemboy">Reddit</a> | <a href="https://github.com/npedv/femboybingogenerator/">GitHub</a>
             <br>
-            V0.2
+            V0.2.2
             </h2>
         </center>
 </body>
